grid align fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h2 {
 
 .classLine {
   display: grid;
-  grid-template-columns: 1fr 4fr 4fr 4fr 3fr;
+  grid-template-columns: 1fr 4fr 4fr 4fr 4fr;
   width: 600px;
   font-size: 14pt;
   padding: 5px 10px 5px 10px;
@@ -97,6 +97,7 @@ h2 {
 
 .classLine .classroom {
   text-align: right;
+  width: 100px;
 }
 
 .studentData {
